fix(about): ajustement de la taille des collapses sur la page About

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,3 +1,4 @@
 .about__collapses {
-    margin-top: 20px;
+    margin: 38px auto 0 auto ;
+    width: 80%;
 }
